--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -23,39 +23,38 @@ jobs:
 
       - name: Repository metadata
         uses: actions/github-script@v3
-        id: repository
         with:
           script: |
-            const repo = await github.repos.get(context.repo)
-            return repo.data
-          - name: Prepare
-            id: prepare
-            run: |
-              DOCKER_IMAGE=marekhanzal/buffalo
-              VERSION=noop
-              if [ "${{ github.event_name }}" = "schedule" ]; then
-                VERSION=nightly
-              elif [[ $GITHUB_REF == refs/tags/* ]]; then
-                VERSION=${GITHUB_REF#refs/tags/}
-              elif [[ $GITHUB_REF == refs/heads/* ]]; then
-                VERSION=$(echo ${GITHUB_REF#refs/heads/} | sed -r 's#/+#-#g')
-                if [ "${{ github.event.repository.default_branch }}" = "$VERSION" ]; then
-                  VERSION=edge
+            const repository = await github.repos.get(context.repo)
+            return repository.data
+            - name: Prepare
+              id: prepare
+              run: |
+                DOCKER_IMAGE=marekhanzal/buffalo
+                VERSION=noop
+                if [ "${{ github.event_name }}" = "schedule" ]; then
+                  VERSION=nightly
+                elif [[ $GITHUB_REF == refs/tags/* ]]; then
+                  VERSION=${GITHUB_REF#refs/tags/}
+                elif [[ $GITHUB_REF == refs/heads/* ]]; then
+                  VERSION=$(echo ${GITHUB_REF#refs/heads/} | sed -r 's#/+#-#g')
+                  if [ "${{ github.event.repository.default_branch }}" = "$VERSION" ]; then
+                    VERSION=edge
+                  fi
+                elif [[ $GITHUB_REF == refs/pull/* ]]; then
+                  VERSION=pr-${{ github.event.number }}
                 fi
-              elif [[ $GITHUB_REF == refs/pull/* ]]; then
-                VERSION=pr-${{ github.event.number }}
-              fi
-              TAGS="${DOCKER_IMAGE}:${VERSION}"
-              if [[ $VERSION =~ ^v[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}$ ]]; then
-                MINOR=${VERSION%.*}
-                MAJOR=${MINOR%.*}
-                TAGS="$TAGS,${DOCKER_IMAGE}:${MINOR},${DOCKER_IMAGE}:${MAJOR},${DOCKER_IMAGE}:latest"
-              elif [ "${{ github.event_name }}" = "push" ]; then
-                TAGS="$TAGS,${DOCKER_IMAGE}:sha-${GITHUB_SHA::8}"
-              fi
-              echo ::set-output name=version::${VERSION}
-              echo ::set-output name=tags::${TAGS}
-              echo ::set-output name=created::$(date -u +'%Y-%m-%dT%H:%M:%SZ')
+                TAGS="${DOCKER_IMAGE}:${VERSION}"
+                if [[ $VERSION =~ ^v[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}$ ]]; then
+                  MINOR=${VERSION%.*}
+                  MAJOR=${MINOR%.*}
+                  TAGS="$TAGS,${DOCKER_IMAGE}:${MINOR},${DOCKER_IMAGE}:${MAJOR},${DOCKER_IMAGE}:latest"
+                elif [ "${{ github.event_name }}" = "push" ]; then
+                  TAGS="$TAGS,${DOCKER_IMAGE}:sha-${GITHUB_SHA::8}"
+                fi
+                echo ::set-output name=version::${VERSION}
+                echo ::set-output name=tags::${TAGS}
+                echo ::set-output name=created::$(date -u +'%Y-%m-%dT%H:%M:%SZ')
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
@@ -72,9 +71,10 @@ jobs:
 
       - name: Build and push
         uses: docker/build-push-action@v2
+        id: build
         with:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.prepare.outputs.tags }}
 
       - name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
+        run: echo ${{ steps.build.outputs.digest }}
